// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD max-w-20"
    data-testid="InputPassword"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
      data-testid="Input"
      type="password"
    />
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
    >
      <button
        class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="InputPassword__toggle"
        type="button"
      >
        <div
          class="sc-bdfBwQ fPrsah"
          height="1em"
          width="1em"
        >
          <svg>
            eye.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD max-w-20"
    data-testid="InputPassword"
  >
    <input
      aria-invalid="true"
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-18"
      data-testid="Input"
      name="test"
      type="password"
    />
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4 mr-12"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input-error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
    </div>
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
    >
      <button
        class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="InputPassword__toggle"
        type="button"
      >
        <div
          class="sc-bdfBwQ fPrsah"
          height="1em"
          width="1em"
        >
          <svg>
            eye.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
